--- a/TFC/package.json
+++ b/TFC/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.3",
+    "jquery": "^3.4.1",
     "meteor-node-stubs": "^0.4.1"
   },
   "meteor": {
