--- a/TFC/package.json
+++ b/TFC/package.json
@@ -14,6 +14,7 @@
     "@babel/runtime": "^7.9.2",
     "bcrypt": "^3.0.8",
     "bulma-checkradio": "^1.1.1",
+    "bulma-steps": "^2.2.1",
     "bulma-switch": "^2.0.0",
     "jquery": "^3.4.1",
     "meteor-node-stubs": "^0.4.1"
