--- a/TFC/package.json
+++ b/TFC/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.9.6",
+    "@creativebulma/bulma-collapsible": "^1.0.4",
     "bcrypt": "^3.0.8",
     "bulma-checkradio": "^1.1.1",
     "bulma-steps": "^2.2.1",
