--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dependencies": {
         "@babel/runtime": "^7.9.6",
         "@creativebulma/bulma-collapsible": "^1.0.4",
+        "@sendgrid/mail": "^7.1.1",
         "bcrypt": "^3.0.8",
         "bulma-checkradio": "^1.1.1",
         "bulma-steps": "^2.2.1",
