--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
         "bulma-checkradio": "^1.1.1",
         "bulma-steps": "^2.2.1",
         "bulma-switch": "^2.0.0",
+        "dropbox": "^4.0.30",
         "jquery": "^3.5.1",
-        "meteor-node-stubs": "^0.4.1"
+        "meteor-node-stubs": "^0.4.1",
+        "node-fetch": "^2.6.0",
+        "request": "^2.88.2"
     },
     "meteor": {
         "mainModule": {
